Dodany source :gemcutter do Gemfile

--- a/frontend/Gemfile
+++ b/frontend/Gemfile
@@ -1,3 +1,5 @@
+source :gemcutter
+
 # dependencies are generated using a strict version, don't forget to edit the dependency versions when upgrading.
 merb_gems_version = "1.1.0"
 
