--- a/frontend/config/database.yml
+++ b/frontend/config/database.yml
@@ -1,13 +1,12 @@
----
-# This is a sample database file for the Sequel ORM
-:development: &defaults
-  :adapter: sqlite
-  :database: ankieter_development.db
+# MySQL.  Versions 4.1 and 5.0 are recommended.
+#
+#
+# Be sure to use new-style password hashing:
+#   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
+development: &defaults
+  adapter: sqlite
+  database: ankieter_development.db
 
-:test:
-  <<: *defaults
-  :database: ankieter_test.db
-
-:production:
-  <<: *defaults
-  :database: ankieter_production.db
+test:
+  adapter: sqlite
+  database: ankieter_test.db
