--- a/frontend/Gemfile
+++ b/frontend/Gemfile
@@ -26,7 +26,7 @@ gem "merb-slices", merb_gems_version
 gem "merb_sequel"
 gem "merb-haml"
 
-gem "sqlite3-ruby"
+gem "sqlite3-ruby", "1.2.5"
 
 gem "mongrel"
 gem "webrat"
