--- a/frontend/Gemfile
+++ b/frontend/Gemfile
@@ -1,17 +1,18 @@
 source 'http://rubygems.org'
 
 # dependencies are generated using a strict version, don't forget to edit the dependency versions when upgrading.
-merb_gems_version = "1.1.0"
+merb_gems_version = "1.1.3"
+merb_auth_version = "1.1.1"
 
 # If you did disable json for Merb, comment out this line.
 # If you want use json gem just change it.
 # Don't use json gem version lower than 1.1.7! Older versions has security bug!
 gem "json_pure", ">= 1.1.7", :require => "json"
 gem "merb-assets", merb_gems_version
-gem "merb-auth", merb_gems_version
-gem "merb-auth-core", merb_gems_version
-gem "merb-auth-more", merb_gems_version
-gem "merb-auth-slice-password", merb_gems_version
+gem "merb-auth", merb_auth_version
+gem "merb-auth-core", merb_auth_version
+gem "merb-auth-more", merb_auth_version
+gem "merb-auth-slice-password", merb_auth_version
 gem "merb-cache", merb_gems_version
 gem "merb-core", merb_gems_version
 gem "merb-exceptions", merb_gems_version
